--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 on: workflow_dispatch
 
 jobs:
-  testing • ubuntu-latest • py3.6:
+  testing-ubuntu_latest-py3.6:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
